CMAKE_MINIMUM_REQUIRED(VERSION 3.25)
PROJECT(BinarySearchTree C)
SET(CMAKE_C_STANDARD 17)

add_executable(InsertIntoBST InsertIntoBST.c)
add_executable(BSTLevelTraversal BSTLevelTraversal.c)
add_executable(BSTPrintLeafNodes BSTPrintLeafNodes.c)
add_executable(RightLeftViewOfBST RightLeftViewOfBST.c)
add_executable(DeletionInBST DeletionInBST.c)