CMAKE_MINIMUM_REQUIRED(VERSION 3.25)

PROJECT(Linkedlist C)

set(CMAKE_C_STANDARD 17)

add_executable(SinglyLinkedList SinglyLinkedList.c)
add_executable(DetectAndRemoveLoop DetectAndRemoveLoop.c)
add_executable(RemoveDuplicatesFromUnsortedLinkedList RemoveDuplicatesFromUnsortedLinkedList.c)
add_executable(DoubleLinkedList DoubleLinkedList.c)
add_executable(ReverseDoublyLinkedList ReverseDoublyLinkedList.c)
add_executable(SinglyLinkedList SinglyLinkedList.c)
add_executable(RemoveLoopInLinkedList RemoveLoopInLinkedList.c)
add_executable(RemoveDupFromSortedLinkedList RemoveDupFromSortedLinkedList.c)
add_executable(SwapNodesInLinkedList SwapNodesInLinkedList.c)
add_executable(MoveLastNodeToFront MoveLastNodeToFront.c)
add_executable(IntersectionOfTwoSortedLinkedList IntersectionOfTwoSortedLinkedList.c)
add_executable(ReverseDoblyLinkedListAgain ReverseDoblyLinkedListAgain.c)
add_executable(SwapKthNodesInSinglyLinkedList SwapKthNodesInSinglyLinkedList.c)